debezium/dbz#2633 Decouple signal.data.collection validation from Kafka Connect types
Signed-off-by: KGaneshDatta <kdatta@confluent.io>