@@ -6,7 +6,6 @@
 package io.debezium.relational;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
@@ -18,8 +17,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Predicate;
 
-import org.apache.kafka.common.config.ConfigValue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -28,13 +27,11 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import io.debezium.jdbc.JdbcConnection;
 import io.debezium.junit.logging.LogInterceptor;
-import io.debezium.pipeline.signal.channels.SourceSignalChannel;
 import io.debezium.relational.Tables.ColumnNameFilter;
 
 /**
  * Unit tests for {@link SignalDataCollectionValidator}: the enablement/gating checks, the three ordered checks
- * (existence, accepted FQN shape, effective column count), and the exception-swallowing guarantee. {@link JdbcConnection}
- * and {@link RelationalDatabaseConnectorConfig} are mocked so no live database or concrete connector config is required.
+ * (existence, accepted FQN shape, effective column count), and the exception-swallowing guarantee.
  */
 @ExtendWith(MockitoExtension.class)
 public class SignalDataCollectionValidatorTest {
@@ -43,90 +40,77 @@ public class SignalDataCollectionValidatorTest {
     private static final String LOG_PREFIX = "[signal.data.collection.validation]";
     private static final ColumnNameFilter MATCH_ALL = (catalog, schema, table, column) -> true;
     private static final ColumnNameFilter MATCH_NONE = (catalog, schema, table, column) -> false;
+    private static final Predicate<TableId> ALWAYS_SIGNAL_DATA_COLLECTION = table -> true;
 
     @Mock
     private JdbcConnection connection;
 
-    @Mock
-    private RelationalDatabaseConnectorConfig connectorConfig;
-
-    private ConfigValue signalDataCollectionValue;
     private LogInterceptor logInterceptor;
 
     @BeforeEach
     public void beforeEach() {
-        signalDataCollectionValue = new ConfigValue("signal.data.collection");
         logInterceptor = new LogInterceptor(SignalDataCollectionValidator.class);
     }
 
-    /**
-     * Stubs the three enablement gates open and configures the given signal data collection values, so the
-     * validator's loop body actually runs. Tests for the gates themselves stub only what each gate reads.
-     */
-    private void stubEnabled(String... rawValues) {
-        when(connectorConfig.isSignalDataCollectionValidationEnabled()).thenReturn(true);
-        when(connectorConfig.getSnapshotMode()).thenReturn(() -> "streaming");
-        when(connectorConfig.getEnabledChannels()).thenReturn(List.of(SourceSignalChannel.CHANNEL_NAME));
-        when(connectorConfig.getSignalingDataCollectionIds()).thenReturn(Arrays.asList(rawValues));
+    private SignalDataCollectionValidationRequest request(boolean validationEnabled, boolean streamingCapable, boolean sourceChannelEnabled,
+                                                          Predicate<TableId> isSignalDataCollection, ColumnNameFilter columnFilter, String... rawValues) {
+        return new SignalDataCollectionValidationRequest(Arrays.asList(rawValues), validationEnabled, streamingCapable, sourceChannelEnabled,
+                rawValue -> connection, isSignalDataCollection, columnFilter);
+    }
+
+    private SignalDataCollectionValidationRequest enabledRequest(Predicate<TableId> isSignalDataCollection, ColumnNameFilter columnFilter, String... rawValues) {
+        return request(true, true, true, isSignalDataCollection, columnFilter, rawValues);
     }
 
     @Test
     public void shouldDoNothingWhenValidationDisabled() {
-        when(connectorConfig.isSignalDataCollectionValidationEnabled()).thenReturn(false);
-
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                request(false, true, true, ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
         verifyNoInteractions(connection);
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
     }
 
     @Test
-    public void shouldDoNothingWhenSnapshotModeIsInitialOnly() {
+    public void shouldDoNothingWhenNotStreamingCapable() {
         // initial_only never transitions to streaming, so the source channel never reads signal.data.collection -
         // validating it would only produce a misleading failure about a config that's never actually used.
-        when(connectorConfig.isSignalDataCollectionValidationEnabled()).thenReturn(true);
-        when(connectorConfig.getSnapshotMode()).thenReturn(() -> "initial_only");
-
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                request(true, false, true, ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
         verifyNoInteractions(connection);
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
     }
 
     @Test
     public void shouldDoNothingWhenSourceChannelDisabled() {
-        when(connectorConfig.isSignalDataCollectionValidationEnabled()).thenReturn(true);
-        when(connectorConfig.getSnapshotMode()).thenReturn(() -> "streaming");
-        when(connectorConfig.getEnabledChannels()).thenReturn(List.of("kafka"));
-
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                request(true, true, false, ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
         verifyNoInteractions(connection);
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
     }
 
     @Test
     public void shouldSkipBlankSignalDataCollectionValues() {
-        stubEnabled(null, " ");
-
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, (String) null, " "));
 
         verifyNoInteractions(connection);
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
     }
 
     @Test
     public void shouldLogInfoAndNotFailWhenSignalDataCollectionIsValid() throws SQLException {
-        stubEnabled(RAW_VALUE);
         TableId resolved = new TableId(null, "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(resolved));
-        when(connectorConfig.isSignalDataCollection(resolved)).thenReturn(true);
-        when(connectorConfig.getColumnFilter()).thenReturn(MATCH_ALL);
         when(connection.getColumnNames(resolved)).thenReturn(List.of("id", "type", "data"));
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
+        assertThat(result.warnings()).isEmpty();
         assertThat(logInterceptor.containsMessage(LOG_PREFIX + " Signal data collection '" + RAW_VALUE + "' is valid.")).isTrue();
     }
 
@@ -135,61 +119,52 @@ public class SignalDataCollectionValidatorTest {
         // A 2-part FQN can match same-named tables in more than one catalog (e.g. SqlServer multi-db mode); the
         // one actually configured as the connector's signal data collection must be picked over the rest,
         // regardless of Set iteration order, and only that one's columns are inspected.
-        stubEnabled(RAW_VALUE);
         TableId otherCatalogMatch = new TableId("otherDb", "dbo", "debezium_signal");
         TableId configuredMatch = new TableId("testDB", "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(otherCatalogMatch, configuredMatch));
-        // otherCatalogMatch is left unstubbed - isSignalDataCollection() defaults to false for it, and whether it's
-        // even queried depends on Set iteration order, which findFirst() may short-circuit past.
-        when(connectorConfig.isSignalDataCollection(configuredMatch)).thenReturn(true);
-        when(connectorConfig.getColumnFilter()).thenReturn(MATCH_ALL);
         when(connection.getColumnNames(configuredMatch)).thenReturn(List.of("id", "type", "data"));
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(configuredMatch::equals, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
         verify(connection, never()).getColumnNames(otherCatalogMatch);
     }
 
     @Test
     public void shouldFailWhenTableDoesNotExist() throws SQLException {
-        stubEnabled(RAW_VALUE);
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Collections.emptySet());
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages())
-                .containsExactly("Signal data collection '" + RAW_VALUE + "' does not exist.");
+        assertThat(result.errors()).containsExactly("Signal data collection '" + RAW_VALUE + "' does not exist.");
         verify(connection, never()).getColumnNames(any());
     }
 
     @Test
     public void shouldFailWhenWrongShapeMatchesOneCandidate() throws SQLException {
-        stubEnabled(RAW_VALUE);
         TableId found = new TableId("testDB", "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(found));
-        when(connectorConfig.isSignalDataCollection(found)).thenReturn(false);
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(table -> false, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages())
-                .containsExactly("signal.data.collection must be '" + found + "', not '" + RAW_VALUE + "'.");
+        assertThat(result.errors()).containsExactly("signal.data.collection must be '" + found + "', not '" + RAW_VALUE + "'.");
         verify(connection, never()).getColumnNames(any());
     }
 
     @Test
     public void shouldFailWhenWrongShapeMatchesMultipleCandidates() throws SQLException {
         // The message must list every candidate, sorted for determinism, instead of picking one via Set iteration order.
-        stubEnabled(RAW_VALUE);
         TableId dbTwoMatch = new TableId("db2", "dbo", "debezium_signal");
         TableId dbOneMatch = new TableId("db1", "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(dbTwoMatch, dbOneMatch));
-        when(connectorConfig.isSignalDataCollection(dbOneMatch)).thenReturn(false);
-        when(connectorConfig.isSignalDataCollection(dbTwoMatch)).thenReturn(false);
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(table -> false, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages())
+        assertThat(result.errors())
                 .containsExactly("signal.data.collection must be one of [" + dbOneMatch + ", " + dbTwoMatch + "], not '" + RAW_VALUE + "'.");
         verify(connection, never()).getColumnNames(any());
     }
@@ -198,16 +173,14 @@ public class SignalDataCollectionValidatorTest {
     public void shouldFailWhenColumnFilterReducesSignalTableBelowRequiredColumns() throws SQLException {
         // The most common real-world trigger: a column.include.list scoped to other tables matches none of the
         // signal table's columns (a typo that omits just one of id/type/data has the same effect).
-        stubEnabled(RAW_VALUE);
         TableId resolved = new TableId(null, "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(resolved));
-        when(connectorConfig.isSignalDataCollection(resolved)).thenReturn(true);
-        when(connectorConfig.getColumnFilter()).thenReturn(MATCH_NONE);
         when(connection.getColumnNames(resolved)).thenReturn(List.of("id", "type", "data"));
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_NONE, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages()).containsExactly("Signal data collection '" + RAW_VALUE
+        assertThat(result.errors()).containsExactly("Signal data collection '" + RAW_VALUE
                 + "' has 0 columns; exactly 3 are required. Adjust the table or column.include.list/column.exclude.list accordingly.");
     }
 
@@ -215,18 +188,16 @@ public class SignalDataCollectionValidatorTest {
     public void shouldWarnButNotFailWhenEffectiveColumnCountAboveRequired() throws SQLException {
         // Extra metadata columns beyond id/type/data are tolerated - only flagged as a warning, since customers
         // may legitimately keep them on the signal table.
-        stubEnabled(RAW_VALUE);
         TableId resolved = new TableId(null, "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(resolved));
-        when(connectorConfig.isSignalDataCollection(resolved)).thenReturn(true);
-        when(connectorConfig.getColumnFilter()).thenReturn(MATCH_ALL);
         when(connection.getColumnNames(resolved)).thenReturn(List.of("id", "type", "data", "created_at", "note"));
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
-        assertThat(logInterceptor.containsWarnMessage("Signal data collection '" + RAW_VALUE
-                + "' has 5 columns; exactly 3 are required. Adjust the table or column.include.list/column.exclude.list accordingly.")).isTrue();
+        assertThat(result.errors()).isEmpty();
+        assertThat(result.warnings()).containsExactly("Signal data collection '" + RAW_VALUE
+                + "' has 5 columns; exactly 3 are required. Adjust the table or column.include.list/column.exclude.list accordingly.");
     }
 
     @Test
@@ -234,44 +205,38 @@ public class SignalDataCollectionValidatorTest {
         // Multi-task deployments can configure more than one signal.data.collection - each must be checked
         // independently, and a problem in one must not prevent the other from being validated.
         String secondRawValue = "dbo.other_signal";
-        stubEnabled(RAW_VALUE, secondRawValue);
         TableId resolved = new TableId(null, "dbo", "debezium_signal");
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenReturn(Set.of(resolved));
-        when(connectorConfig.isSignalDataCollection(resolved)).thenReturn(true);
-        when(connectorConfig.getColumnFilter()).thenReturn(MATCH_ALL);
         when(connection.getColumnNames(resolved)).thenReturn(List.of("id", "type", "data"));
         when(connection.readTableNames(null, "dbo", "other_signal", null)).thenReturn(Collections.emptySet());
 
-        SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue);
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE, secondRawValue));
 
-        assertThat(signalDataCollectionValue.errorMessages())
-                .containsExactly("Signal data collection '" + secondRawValue + "' does not exist.");
+        assertThat(result.errors()).containsExactly("Signal data collection '" + secondRawValue + "' does not exist.");
     }
 
     @Test
     public void shouldSwallowSqlExceptionAndContinueToNextValue() throws SQLException {
         String secondRawValue = "dbo.other_signal";
-        stubEnabled(RAW_VALUE, secondRawValue);
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenThrow(new SQLException("connection reset"));
         when(connection.readTableNames(null, "dbo", "other_signal", null)).thenReturn(Collections.emptySet());
 
-        assertThatCode(() -> SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue))
-                .doesNotThrowAnyException();
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE, secondRawValue));
 
         assertThat(logInterceptor.containsWarnMessage("Could not validate signal data collection '" + RAW_VALUE + "'")).isTrue();
-        assertThat(signalDataCollectionValue.errorMessages())
-                .containsExactly("Signal data collection '" + secondRawValue + "' does not exist.");
+        assertThat(result.errors()).containsExactly("Signal data collection '" + secondRawValue + "' does not exist.");
     }
 
     @Test
     public void shouldSwallowRuntimeExceptionAndNeverThrow() throws SQLException {
-        stubEnabled(RAW_VALUE);
         when(connection.readTableNames(null, "dbo", "debezium_signal", null)).thenThrow(new RuntimeException("unexpected"));
 
-        assertThatCode(() -> SignalDataCollectionValidator.validate(connection, connectorConfig, signalDataCollectionValue))
-                .doesNotThrowAnyException();
+        SignalDataCollectionValidationResult result = SignalDataCollectionValidator.validate(
+                enabledRequest(ALWAYS_SIGNAL_DATA_COLLECTION, MATCH_ALL, RAW_VALUE));
 
         assertThat(logInterceptor.containsWarnMessage("Could not validate signal data collection '" + RAW_VALUE + "'")).isTrue();
-        assertThat(signalDataCollectionValue.errorMessages()).isEmpty();
+        assertThat(result.isValid()).isTrue();
     }
 }
